@@ -1,4 +1,5 @@
 Development
+	GUI for setting subtitles, but it doesn't actually use the subtitle yet
 	Fix all kinds GTK warnings when a bad commandline option is issued
 	Make mouse disappear when panel disappears
 	Make control panel disappear in FS mode after 5 seconds of no mouse movement
